2005-01-16 Braden McDaniel  <braden@endoframe.com>

	Eliminated unnecessary inclusion of <iostream>.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/basetypes.h
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2005-01-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/Makefile.am:  Removed reference to
	openvrml/common.h.

2005-01-16 Braden McDaniel  <braden@endoframe.com>

	Moved definition of constants from libopenvrml/openvrml/common.h
	to libopenvrml/private.h.

	* src/libopenvrml/private.h
	* src/libopenvrml/openvrml/basetypes.h
	* src/libopenvrml/openvrml/browser.h
	* src/libopenvrml/openvrml/common.h:  Removed file.
	* src/libopenvrml/openvrml/frustum.cpp
	* src/libopenvrml/openvrml/frustum.h
	* src/libopenvrml/openvrml/img.h
	* src/libopenvrml/openvrml/node_ptr.h
	* src/libopenvrml/openvrml/rendering_context.h
	* src/libopenvrml/openvrml/system.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2005-01-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp (browser::~browser):
	Don't clear the node_class_map.  This is unnecessary, and it
	prematurely removes PROTO definitions that the scene (which
	hasn't been destroyed yet) depends on.

2005-01-10 Braden McDaniel  <braden@endoframe.com>

	Merged changes from 0.15.5 release.

	* NEWS:  Updates for 0.15.5 release.
	* README
	* configure.ac:  Fixed problem with an empty -rpath argument
	when configured with --disable-script-node-javascript.
	* openvrml.spec.in:  Added openvrml-player to the
	openvrml-mozilla-plugin package.
	* doc/Doxyfile:  Updates for Doxygen 1.4.
	* doc/doxygen-header:  Updates for Doxygen 1.4
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj
	* mozilla-plugin/configure.ac:  Added subdirectory for